--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
     </div>
 
-    <a class="edit-btn" href="/changePage.html">
+    <a class="edit-btn" href="https://matiasnetto.github.io/Minimalistic-New-Tab/changePage.html">
       <img src="assets/Gui/Settings-BTN.png" alt="">
     </a>
 
