--- a/changePage.html
+++ b/changePage.html
@@ -26,7 +26,7 @@
             <img src="./assets/Gui/Add-Remove-BTN.png" alt="">
             <p class="mode-text">ADD/REMOVE</p>
           </button>
-          <a class="exit-btn" href="/index.html">
+          <a class="exit-btn" href="https://matiasnetto.github.io/Minimalistic-New-Tab/index.html">
             <img src="assets/Gui/Back-BTN.png" alt="">
           </a>
           <a href="https://github.com/MatiasNetto" class="github-link">
